--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
     "@types/morgan": "^1.9.10",
     "nodemon": "^3.1.10",
